[package]
name = "wordl"
version = "0.3.0"
edition = "2021"
description = "Terminal Wordle game. Web like with keyboard hints and slow reveal animations."
license = "GPL-3.0"
repository = "https://github.com/palerdot/wordl-rs"
documentation = "https://github.com/palerdot/wordl-rs"
homepage = "https://github.com/palerdot/wordl-rs"
readme = "README.md"
keywords = ["wordle", "terminal", "games"]
categories = ["command-line-utilities", "games"]
exclude = [
  "logo.png",
  "wordl.gif",
  "wordl.png",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
rand = "0.8.5"
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = "0.7.10"
